<resources>
    <string name="qv_add">+</string>
    <string name="qv_remove">-</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="common_display_text_retry">Retry</string>
    <string name="empty_string"> </string>
    <string name="common_button_next">Next</string>
    <string name="common_display_text_error_no_internet">Looks like you\'re offline. Please reconnect and refresh to continue using YAP.</string>
    <string name="common_button_yes">Yes</string>
    <string name="common_button_no">No</string>
    <string name="common_button_add">Add</string>
    <string name="common_button_cancel">Cancel</string>
    <string name="common_button_ok">OK</string>
    <string name="common_button_settings">Settings</string>
    <string name="common_button_save">Save</string>
    <string name="common_button_confirm">Confirm</string>
    <string name="common_button_delete">Delete</string>
    <string name="common_button_view">View</string>
    <string name="common_button_continue">Continue</string>
    <string name="common_button_submit">Submit</string>
    <string name="common_text_thanks">Thanks</string>
    <string name="common_text_allow">Allow</string>
    <string name="common_text_deny">Deny</string>
    <string name="common_button_select">Select</string>
    <string name="common_text_done">Done</string>
    <string name="common_text_permission">needs following permissions to continue</string>
    <string name="common_text_hey">Hey</string>
    <string name="common_button_activate">Activate</string>
    <string name="common_button_go_to_dashboard">Go to dashboard</string>
    <string name="common_text_completed">Completed</string>
    <string name="common_text_currency_type">PKR</string>
    <string name="common_amount_hint">0.00</string>
    <string name="common_percentage_hint">0</string>
    <string name="common_display_text_nothing_to_report">Start using your account to see all your transactions here</string>
    <string name="common_button_logout">Log out</string>
    <string name="error_view_text">No results found\ntab to retry</string>
    <string name="empty_view_text">No results found</string>
    <string name="common_text_fee">Fee: %1s</string>
    <string name="today">Today, %1$s</string>
    <string name="tomorrow">Tomorrow, %1$s</string>
    <string name="yesterday">Yesterday, %1$s</string>
    <string name="common_text_complete">Complete</string>
    <string name="common_text_coming_soon">Coming Soon</string>
    <string name="fingerprint_error_unknown">Unknown error. Please try again later.</string>
    <string name="common_text_enter">Re-enter</string>
    <string name="common_text_new">new</string>
    <string name="common_text_do_it_later">Do it later</string>
    <string name="common_text_copied">Copied to clipboard</string>
    <string name="common_display_text_daily_limit_error_single_transaction">This amount exceeds your daily transaction limit</string>
    <string name="common_display_text_available_balance_error">Uh oh! You’ll need to have a minimum balance of %1s plus the fee stated to proceed with this payment. </string>
    <string name="common_sm_display_text_min_max_limit_error_transaction">Your entered amount should be between %1s and %2s</string>
    <string name="common_masked_card_number">XXXX XXXX XXXX %1s</string>
    <string name="common_card_date">%1s/%2s</string>
    <string name="common_top_up_denomination_amount">+%1s</string>
    <string name="common_text_edit">Edit</string>
    <string name="common_text_otp_title">Verify your One Time Password</string>
    <string name="common_text_exit_pop_up_heading">Are you sure you want to Exit?</string>
    <string name="common_text_exit_pop_up_description">The information you’ve entered will be lost</string>
    <string name="common_saved_image_to_gallery">Your image has been saved to your gallery.</string>
    <string name="message_camera_permission_denied">Camera and  Storage permissions are needed to capture image. Turning off any permission won\'t allow application run smoothly. Please turn on all requested permissions from Settings > Permissions.</string>
    <string name="message_contact_permission_denied">Contacts permissions are needed to get contacts. Turning off any permission won\'t allow application run smoothly. Please turn on all requested permissions from Settings > Permissions.</string>
    <string name="common_text_permissions_denied">This app may not work correctly without the requested permissions.</string>
    <string name="open_setting">OPEN SETTINGS</string>
    <string name="common_display_text_y2y_share">Hey! \n%2$s would like to send you some money via YAP. Download the app now and join YAP’s fast growing community!\n\nDownload YAP here:\n\n%3$s</string>
    <string name="error_message_email_validation">Invalid Email format</string>
    <string name="error_message_phone_email_validation">Invalid Email or Phone format</string>
    <string name="error_message_first_name_validation">Invalid first name format</string>
    <string name="error_message_last_name_validation">Invalid last name format</string>
    <string name="error_message_cpf_validation">Invalid CPF format</string>
    <string name="error_message_url_validation">Invalid url format</string>
    <string name="error_message_credit_card_validation">Invalid Credit Card format</string>
    <string name="error_message_empty_validation">This field can\'t be empty</string>
    <string name="error_message_not_equal_password">Passwords are not the same</string>
    <string name="error_message_not_equal_phone">Mobile No are not the same</string>
    <string name="default_required_validation_message">This field is required.</string>
    <string name="error_message_postal_address">Postal Address is not valid</string>
    <string name="default_required_length_message_min_max">The input must have length between %1$d
        and %2$d.
    </string>
    <string name="default_required_length_message_min">The input length must be greater than
        or equal to %1$d characters.
    </string>
    <string name="default_required_length_message_max">The input length must be less than or
        equal to %1$d characters.
    </string>
    <string name="default_regex_validation_message">The field value does not match the
        required format.
    </string>
    <string name="error_passcode_sequence">Sequential numbers are not allowed</string>
    <string name="error_passcode_same_digits">Repetitive numbers are not allowed</string>
    <string name="error_pin_code_not_same_digits">This doesn\'t match the previously entered PIN</string>
    <string name="screen_welcome_button_get_started">Get started</string>
    <string name="screen_otp_verification_title_text">Verify your mobile number</string>
    <string name="screen_otp_verification_sent_verification_code">We\'ve sent a verification code to\n %1s</string>
    <string name="screen_otp_verification_resend_code">Resend code</string>
    <string name="screen_otp_verification_verify">Verify</string>
    <string name="screen_passcode_title_text">Create a 4 digit passcode to access your account </string>
    <string name="screen_passcode_terms_and_condition">By creating a passcode you agree to our \nTerms &amp; Conditions</string>
    <string name="screen_passcode_create_passcode">Create Passcode</string>
    <string name="screen_passcode_create_new_passcode">Create new passcode</string>
    <string name="screen_name_verification_title_text">What’s your name?</string>
    <string name="screen_name_verification_first_name">First Name</string>
    <string name="screen_name_verification_last_name">Last Name</string>
    <string name="screen_email_verification_screen_title_text">What\'s your preferred email address?</string>
    <string name="screen_email_verification_screen_email_address">Email address</string>
    <string name="screen_email_verification_screen_guide">Please validate your email address after signing up and we promise not to spam you.</string>
    <string name="screen_email_verification_display_text_title">Great!</string>
    <string name="screen_onboarding_success_display_text_title">Congrats, %1s!</string>
    <string name="screen_onboarding_success_verification_text_note">Due to all the excitement of our official launch, we are gradually activating as many accounts as possible to keep the app running smoothly. In the meantime, until your account is ready to be fully activated you’ll be placed in a queue.</string>
    <string name="screen_onboarding_success_display_text_sub_title">A YAP account has been created for you in less than %1s seconds!</string>
    <string name="screen_onboarding_success_display_text_sub_title_no_interval">A YAP Personal Account has been created for you!</string>
    <plurals name="screen_onboarding_success_button_text">
        <item quantity="one">Complete verification</item>
        <item quantity="other">Queue up!</item>
    </plurals>
    <string name="screen_kyc_home_display_text_screen_title">Complete verification</string>
    <string name="screen_kyc_home_display_text_sub_heading">%1s, please scan your CNIC</string>
    <string name="screen_kyc_home_document_id_title">CNIC</string>
    <string name="screen_kyc_home_document_id_scan">Tap to scan your CNIC</string>
    <string name="screen_kyc_home_button_skip">Skip and go to dashboard</string>
    <string name="screen_document_scan_display_text_title">Complete verification</string>
    <string name="screen_document_scan_display_text_sub_title">Thanks %1s! Verify your details are exactly as per your CNIC.</string>
    <string name="screen_dashboard_bottom_bar_home_text">Home</string>
    <string name="screen_dashboard_bottom_bar_store_text">Store</string>
    <string name="screen_dashboard_bottom_bar_yap_it_text">YAP it</string>
    <string name="screen_dashboard_bottom_bar_cards_text">Cards</string>
    <string name="screen_dashboard_bottom_bar_more_text">More</string>
    <string name="screen_touch_id_text_title">Would you like to use Touch ID to log in to your account?</string>
    <string name="screen_touch_id_text_description">Make sure your device settings for Touch ID are always on.</string>
    <string name="screen_touch_id_text_terms_and_condition">By clicking “Use Touch ID” you agree to our Terms &amp; Conditions</string>
    <string name="screen_touch_id_text_button">Use Touch ID</string>
    <string name="screen_touch_id_text_no_thanks">No, thanks</string>
    <string name="screen_card_pin_intro_display_text_title">Great, looks like you just received your YAP card!</string>
    <string name="screen_card_pin_intro_display_text_description">Now create a unique 4-digit PIN code to be able to use your debit card for purchases and withdrawals</string>
    <string name="screen_card_pin_intro_button_create">Create PIN code</string>
    <string name="screen_on_boarding_failed_display_text_title_sorry">We’re sorry :(</string>
    <string name="screen_on_boarding_failed_display_text_sub_title_sorry">Unfortunately, we’re unable to proceed with creating your account at this time. However, we do appreciate your interest in getting a YAP account.</string>
    <string name="screen_on_boarding_failed_display_text_button_go_to_dashboard">Skip and go to dashboard</string>
    <string name="screen_fetch_beneficiary_display_text_title">Beneficiary account details</string>
    <string name="screen_beneficiary_account_details_display_text_title">Confirm the beneficiary</string>
    <string name="screen_beneficiary_account_details_display_text_iban_or_account_no">%1s: %2s</string>
    <string name="screen_beneficiary_account_details_display_text_beneficiary_found">The beneficiary found:</string>
    <string name="screen_beneficiary_account_details_display_text_heading_nick_name">Nickname</string>
    <string name="screen_beneficiary_account_details_display_text_nick_name_hint">Enter nick name</string>
</resources>