<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.yap.yappk.pk.ui.kyc.failed.OnBoardingFailedVM" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/pk_margin_medium_large"
            android:paddingEnd="@dimen/pk_margin_medium_large">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                style="@style/Yap.Pk.Widget.TextView.PrimaryDarkColor.XXLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pk_margin_extra_large"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/screen_on_boarding_failed_display_text_title_sorry" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivOnBoardingFail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pk_margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:srcCompat="@drawable/pk_ic_on_boarding_failed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSubTitle"
                style="@style/Yap.Pk.Widget.TextView.SecondaryColor.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pk_margin_extra_large"
                android:layout_marginBottom="@dimen/pk_margin_extra_large"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/btnDone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivOnBoardingFail"
                app:layout_constraintVertical_bias="0"
                tools:text="@string/screen_on_boarding_failed_display_text_sub_title_sorry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pk_margin_medium"
                android:layout_marginBottom="@dimen/pk_margin_medium_large"
                android:onClick="@{viewModel::onClick}"
                app:layout_constraintBottom_toTopOf="@+id/tvGoToDashboard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.98"
                tools:text="@string/common_button_logout" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvGoToDashboard"
                style="@style/Yap.Pk.Widget.TextView.PrimaryColor.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pk_margin_extra_large"
                android:layout_marginBottom="@dimen/pk_margin_medium_large"
                android:gravity="center"
                android:onClick="@{viewModel::onClick}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="@string/screen_on_boarding_failed_display_text_button_go_to_dashboard" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
