<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.yap.yappk.pk.ui.dashboard.cards.cardpin.createpin.cardpinintro.CardPinIntroVM" />

        <import type="com.yap.yappk.localization.LocalizationKt" />

        <import type="com.yap.yappk.localization.StringsKt" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pk_ic_bubble" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            style="@style/Yap.Pk.Widget.TextView.PrimaryDark"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/pk_margin_large"
            android:layout_marginTop="@dimen/pk_margin_medium_large"
            android:layout_marginEnd="@dimen/pk_margin_large"
            android:gravity="center"
            android:text="@{String.format(LocalizationKt.getString(context,StringsKt.screen_card_pin_intro_display_text_title)) }"
            android:textSize="@dimen/pk_text_size_h3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLabel"
            tools:text="@string/screen_card_pin_intro_display_text_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSubTitle"
            style="@style/Yap.Pk.Widget.TextView.SecondaryColor.Medium"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/pk_margin_large"
            android:layout_marginTop="@dimen/pk_margin_medium_large"
            android:layout_marginEnd="@dimen/pk_margin_large"
            android:gravity="center"
            android:text="@{String.format(LocalizationKt.getString(context,StringsKt.screen_card_pin_intro_display_text_description)) }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="@string/screen_card_pin_intro_display_text_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{viewModel::onClick}"
            android:text="@{LocalizationKt.getString(context,StringsKt.screen_card_pin_intro_button_create)}"
            app:layout_constraintBottom_toTopOf="@+id/btnDoItLater"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/screen_card_pin_intro_button_create" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDoItLater"
            style="@style/Yap.Pk.Widget.Button.TextButton.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/pk_margin_small"
            android:onClick="@{viewModel::onClick}"
            android:text="@{LocalizationKt.getString(context,StringsKt.common_text_do_it_later)}"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/pk_text_size_h5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/common_text_do_it_later" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>